--- a/wp-content/themes/awesome_co/style.css
+++ b/wp-content/themes/awesome_co/style.css
@@ -28,7 +28,7 @@ License URI: license.txt
 13.==Tables
 14.==Lists
 15.==Misc tags
-
+16. == custom post type - PRODUCTS 
 
 */
 @import url(http://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic);
@@ -1129,4 +1129,80 @@ RSS Feed Image
 	background: #f4f4f4;
 	border-top: 1px solid #ccc;
 	border-bottom: 1px solid #ccc;
+}
+
+/* 
+	== custom post type - PRODUCTS 
+*/
+.archive-title{
+	margin:20px 47px;
+	font-size:30px;
+	text-align:center;
+	color:#CCC;
+	border-top: double 1px #EEE;	
+	border-bottom: double 1px #EEE;
+	padding:30px 0;
+	font-style:italic
+}
+.post-type-archive-product #content,
+.single-product #content{
+	width:100%;
+	float:none;	
+}
+.post-type-archive-product #content .hentry,
+.tax-brand #content .hentry,
+.tax-feature #content .hentry{
+	width:33%;
+	margin:0 ;
+	padding:0;
+	float:left;
+	text-align:center;
+}
+.post-type-archive-product .thumbnail,
+.tax-brand .thumbnail,
+.tax-feature .thumbnail{
+	width:auto;
+	margin:0;
+	padding:0;
+	float:none;	
+}
+.post-type-archive-product .hentry h2,
+.tax-brand .hentry h2,
+.tax-feature .hentry h2{
+	margin:10px;
+	font-style:normal;	
+}
+.post-type-archive-product p,
+.tax-brand p,
+.tax-feature p{
+	margin:10px 47px;
+	color:#999;
+	font-style:italic;	
+}
+.product-info{
+	float:left;
+	width:500px;	
+}
+body.single-product .post-meta{
+	background-color:transparent;
+	text-align:left;	
+	list-style-type:none;
+	clear:none;
+}
+body.single-product .post-meta span{
+	display:inline;
+	font-style:italic;
+	color:#999;	
+}
+.post-type-archive-product .product{
+	min-height:300px;
+}
+.product-taxonomies{
+	background-color:#EEE;
+	width:33%;
+	padding:0 10px ;
+	float:left;	
+	margin-right:10px;
+	margin-bottom:6px;
+	font-size:.875em;
 }
